Updated the fork and added better memory allocation
* The fork was updated to the most recent master branch of the
Aloja/aloja repository (last commit included: 8d6f96c)
* This commit also includes more memory settings. In benchmark_s2rdf,
there is a JDBC4RDF executor memory setting now (in the form of
executor.urisuffix) and HADOOP_CLIENT_OPTS uses more memory now. This
was required for running benchmarks with a scale factor of 100,000

--- a/aloja-web/views/configEvaluationViews/config_improvement.html.twig
+++ b/aloja-web/views/configEvaluationViews/config_improvement.html.twig
@@ -44,7 +44,7 @@
             },
 		},
 		subtitle: {
-			text: 'From {{ count }} distinct runs.  Error bars shows MAX and MIN'
+			text: 'From {{ count }} distinct runs.  Plot bars shows MAX and MIN'
 		},
 		xAxis: {
 			categories: [{{ categories|raw }}],
