--- a/aloja-web/views/configEvaluationViews/exec_times.html.twig
+++ b/aloja-web/views/configEvaluationViews/exec_times.html.twig
@@ -44,7 +44,7 @@
             },
 		},
 		subtitle: {
-			text: 'From {{ count }} distinct runs.  Error bars shows MAX and MIN'
+			text: 'From {{ count }} distinct runs.  Plot bars shows MAX and MIN'
 		},
 		xAxis: {
 			categories: [{{ categories|raw }}],
